Switched to standard naming and View classes
